--- a/Corso.Bologna/Corso.Bologna.Windows/packages.config
+++ b/Corso.Bologna/Corso.Bologna.Windows/packages.config
@@ -3,5 +3,10 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="win81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="win81" />
   <package id="PCLStorage" version="1.0.2" targetFramework="win81" />
+  <package id="sqlite-net-pcl" version="1.2.0" targetFramework="win81" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.0.1" targetFramework="win81" />
+  <package id="SQLitePCLRaw.core" version="1.0.1" targetFramework="win81" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v120" version="1.0.1" targetFramework="win81" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.win81" version="1.0.1" targetFramework="win81" />
   <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="win81" />
 </packages>
