--- a/Corso.Bologna/Corso.Bologna/Corso.Bologna.csproj
+++ b/Corso.Bologna/Corso.Bologna/Corso.Bologna.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Services\IRecipeService.cs" />
     <Compile Include="Services\LocalDataSqlRecipeService.cs" />
     <Compile Include="Services\RecipeService.cs" />
+    <Compile Include="TeplatesSelector\RecipeTemplateSelector.cs" />
     <Compile Include="TestStyle.xaml.cs">
       <DependentUpon>TestStyle.xaml</DependentUpon>
     </Compile>
