--- a/Corso.Bologna/Corso.Bologna.UWP/project.json
+++ b/Corso.Bologna/Corso.Bologna.UWP/project.json
@@ -3,6 +3,7 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "MvvmLightLibs": "5.3.0",
     "PCLStorage": "1.0.2",
+    "Xamarin.FFImageLoading.Forms": "2.2.1",
     "Xamarin.Forms": "2.3.2.127"
   },
   "frameworks": {
