--- a/Corso.Bologna/Corso.Bologna/Corso.Bologna.csproj
+++ b/Corso.Bologna/Corso.Bologna/Corso.Bologna.csproj
@@ -51,9 +51,10 @@
     <Compile Include="MasterViews\MasterView.xaml.cs">
       <DependentUpon>MasterView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Recipe.cs" />
-    <Compile Include="RecipeDetailsView.xaml.cs">
+    <Compile Include="Views\RecipeDetailsView.xaml.cs">
       <DependentUpon>RecipeDetailsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Services\IRecipeService.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="TestStyle.xaml.cs">
       <DependentUpon>TestStyle.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\DetailsViewModel.cs" />
     <Compile Include="ViewModels\FakeRecipeService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
@@ -152,7 +154,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="RecipeDetailsView.xaml">
+    <EmbeddedResource Include="Views\RecipeDetailsView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
