--- a/Corso.Bologna/Corso.Bologna/Corso.Bologna.csproj
+++ b/Corso.Bologna/Corso.Bologna/Corso.Bologna.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\Recipe.cs" />
     <Compile Include="Services\IRecipeDetailService.cs" />
     <Compile Include="Services\RecipedetailService.cs" />
+    <Compile Include="TeplatesSelector\StepTypeDataTemplateSelector.cs" />
     <Compile Include="Views\RecipeDetailsView.xaml.cs">
       <DependentUpon>RecipeDetailsView.xaml</DependentUpon>
     </Compile>
